--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "base",
+  "name": "minsky-landing",
   "version": "0.1.0",
   "private": false,
   "scripts": {
@@ -10,16 +10,15 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@chakra-ui/icons": "1.1.7",
-    "@chakra-ui/react": "1.8.6",
-    "@emotion/react": "11.8.2",
-    "@emotion/styled": "11.8.1",
+    "@mantine/core": "^4.0.7",
+    "@mantine/hooks": "^4.0.7",
+    "@mantine/next": "^4.0.7",
     "@urql/devtools": "2.0.3",
-    "framer-motion": "6.2.8",
     "graphql": "16.3.0",
     "next": "12.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "tabler-icons-react": "^1.40.0",
     "urql": "2.2.0"
   },
   "devDependencies": {
