--- a/package.json
+++ b/package.json
@@ -13,12 +13,18 @@
     "@mantine/core": "^4.0.7",
     "@mantine/hooks": "^4.0.7",
     "@mantine/next": "^4.0.7",
+    "@react-spring/core": "^9.4.4",
+    "@react-spring/three": "^9.4.4",
+    "@react-spring/web": "^9.4.4",
+    "@react-three/drei": "^8.18.10",
+    "@react-three/fiber": "^7.0.26",
     "@urql/devtools": "2.0.3",
     "graphql": "16.3.0",
     "next": "12.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "tabler-icons-react": "^1.40.0",
+    "three": "^0.138.3",
     "urql": "2.2.0"
   },
   "devDependencies": {
@@ -27,6 +33,7 @@
     "@graphql-codegen/typescript-operations": "2.3.5",
     "@graphql-codegen/typescript-urql": "3.5.6",
     "@types/react": "17.0.42",
+    "@types/three": "^0.138.0",
     "eslint": "8.11.0",
     "eslint-config-next": "12.1.0",
     "prettier": "2.6.0",
