feat: added more landing sections and 3d scene improved

--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@mantine/core": "^4.0.7",
-    "@mantine/hooks": "^4.0.7",
+    "@mantine/core": "^4.0.8",
+    "@mantine/hooks": "^4.0.8",
     "@mantine/next": "^4.0.7",
+    "@mantine/notifications": "^4.0.8",
     "@react-spring/core": "^9.4.4",
     "@react-spring/three": "^9.4.4",
     "@react-spring/web": "^9.4.4",
