--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@urql/devtools": "2.0.3",
     "graphql": "16.3.0",
     "next": "12.1.0",
+    "next-seo": "^5.2.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "tabler-icons-react": "^1.40.0",
