--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@directus/sdk": "^9.7.1",
     "@mantine/core": "4.0.8",
     "@mantine/hooks": "4.0.8",
     "@mantine/next": "4.0.8",
@@ -19,15 +20,13 @@
     "@react-spring/web": "9.4.4",
     "@react-three/drei": "8.19.4",
     "@react-three/fiber": "7.0.26",
-    "@urql/devtools": "2.0.3",
     "graphql": "16.3.0",
     "next": "12.1.0",
     "next-seo": "5.2.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "tabler-icons-react": "1.40.0",
-    "three": "0.138.3",
-    "urql": "2.2.0"
+    "three": "0.138.3"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "2.6.2",
