--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -35,7 +35,7 @@ jobs:
             ${{ env.IMAGE_REPO }}:latest
 
   deploy-caprover:
-    runs-on: ubunt-20.04
+    runs-on: ubuntu-20.04
     needs: [build-push-registry]
     steps:
       - name: Deploy to Caprover
