--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -6,7 +6,7 @@ on:
       - "main"
 
 env:
-  IMAGE_REPO: registry.minsky.cc/landing-page
+  IMAGE_REPO: registry.minsky.cc/minskylab/landing-page
 
 jobs:
   build-push-registry:
