--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "dependencies": {
     "@directus/sdk": "9.7.1",
-    "@mantine/core": "4.1.0",
+    "@mantine/core": "^4.1.0",
     "@mantine/hooks": "4.1.0",
     "@mantine/next": "4.1.0",
     "@mantine/notifications": "4.1.0",
