--- a/.eslintrc
+++ b/.eslintrc
@@ -1,6 +1,3 @@
 {
-  "extends": ["next", "next/core-web-vitals"],
-  "rules": {
-    "max-depth": "off"
-  }
+  "extends": ["next", "next/core-web-vitals"]
 }
