--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@react-spring/web": "9.4.4",
     "@react-three/drei": "9.0.1",
     "@react-three/fiber": "8.0.6",
+    "cookies-next": "^2.0.4",
     "graphql": "16.3.0",
     "next": "12.1.4",
     "next-seo": "5.3.0",
