--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@react-three/fiber": "8.0.22",
     "cookies-next": "^2.0.4",
     "graphql": "16.5.0",
+    "i18nifty": "^1.2.0",
     "next": "12.1.6",
     "next-seo": "5.4.0",
     "react": "18.1.0",
