--- a/package.json
+++ b/package.json
@@ -18,8 +18,9 @@
     "@react-spring/core": "9.4.4",
     "@react-spring/three": "9.4.4",
     "@react-spring/web": "9.4.4",
-    "@react-three/drei": "8.19.4",
+    "@react-three/drei": "^9.14.3",
     "@react-three/fiber": "7.0.26",
+    "ci": "^2.2.0",
     "graphql": "16.3.0",
     "next": "12.1.0",
     "next-seo": "5.2.0",
