--- a/.github/workflows/deploy-to-caprover.yml
+++ b/.github/workflows/deploy-to-caprover.yml
@@ -1,4 +1,4 @@
-name: Build and deploy
+name: Build and Deploy Staging
 
 on:
   push:
@@ -6,7 +6,7 @@ on:
       - "dev"
 
 env:
-  IMAGE_REPO: registry.minsky.cc/minskylab/landing-page
+  IMAGE_REPO: registry.minsky.cc/minskylab/landing-page-staging
 
 jobs:
   build:
