--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@directus/sdk": "10.3.1",
+    "@emotion/react": "^11.10.6",
+    "@emotion/server": "^11.10.0",
     "@mantine/core": "6.0.0",
     "@mantine/hooks": "6.0.0",
     "@mantine/next": "6.0.0",
@@ -22,11 +24,13 @@
     "@react-three/fiber": "8.11.9",
     "cookies-next": "^2.1.1",
     "graphql": "16.6.0",
+    "i18next": "^22.4.11",
     "next": "13.2.3",
     "next-i18next": "^13.2.1",
     "next-seo": "5.15.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-i18next": "^12.2.0",
     "tabler-icons-react": "1.56.0",
     "three": "0.150.1"
   },
