feat: clients carousel

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/react": "^11.11.1",
     "@emotion/server": "^11.11.0",
     "@emotion/styled": "^11.11.0",
+    "@mantine/carousel": "^6.0.17",
     "@mantine/core": "6.0.17",
     "@mantine/hooks": "6.0.17",
     "@mantine/next": "6.0.17",
@@ -24,6 +25,8 @@
     "@react-three/drei": "9.79.3",
     "@react-three/fiber": "8.13.5",
     "cookies-next": "^2.1.2",
+    "embla-carousel-autoplay": "^8.0.0-rc11",
+    "embla-carousel-react": "^8.0.0-rc11",
     "graphql": "16.7.1",
     "i18next": "^23.2.11",
     "next": "13.4.10",
