--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "next-i18next": "^14.0.0",
     "next-seo": "6.1.0",
     "react": "18.2.0",
+    "react-calendly": "^4.1.1",
     "react-dom": "18.2.0",
     "react-i18next": "^13.0.2",
     "tabler-icons-react": "1.56.0",
