feat: add @next/third-parties package and GoogleTagManager component

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@mantine/hooks": "6.0.17",
     "@mantine/next": "6.0.17",
     "@mantine/notifications": "6.0.17",
+    "@next/third-parties": "^14.1.4",
     "@react-spring/core": "9.4.5",
     "@react-spring/three": "9.4.5",
     "@react-spring/web": "9.4.5",
